2007-07-18	Al Stone	<ahs3@secure64.com>

	* bind2nsd/Config.py: do not open config file with r+
	* bind2nsd/NamedConf.py: remove recursive module import when
	  running in ways I hadn't tried.

2007-07-13	Al Stone	<ahs3@secure64.com>

	* etc/: added in some files forgotten when convertion to FOSS....
	* scripts/nsd-sync: ...including this one.

2007-07-06	Al Stone	<ahs3@secure64.com>

	* TODO: update.
	* bind2nsd/Key.py: correct missing ')'.
	* bind2nsd/Tokenizer.py: reformatting.
	* bind2nsd/Parser.py: handle 'recursive-clients' option; handle
	  'allow-notify' option; handle 'also-notify' option in zones.
	* bind2nsd/NamedConf.py: handle 'allow-notify' option; handle
	  'also-notify' for simple cases.
	* bind2nsd/NsdConf.py: handle 'allow-notify' option; handle
	  'also-notify' for simple cases.


2007-06-29	Al Stone	<ahs3@secure64.com>

	* TODO: update.
	* bind2nsd/NsdConf.py: when writing zone data files, look for any
	  use of the $GENERATE directive and replace it with the proper
	  RRs; populate info from 'key {}' in BIND.
	* bind2nsd/Parser.py: add in several 'options {}' clauses that
	  we'll recognize but do nothing about for now; handle multiple
	  'key {}' clauses; recognize 'server {}' clauses.
	* bind2nsd/Key.py: add getName(); added self.ipaddrs and methods.
	* bind2nsd/NamedConf.py: allow for more than one 'key {}' clause.
	* bind2nsd/Tokenizer.py: added 'keys' as a keyword.


2007-06-28	Al Stone	<ahs3@secure64.com>

	* TODO: update.
	* bind2nsd/Config.py: 'dest-ip' added as the place to scp files to;
	  search for bind2nsd.conf in '.', $HOME, _and_ /etc/bind2nsd; the
	  default for 'password' file is '/etc/bind2nsd/passwd' _not_
	  '/etc/secure64/passwd'.
	* bind2nsd/NsdConf.py: handle multiple 'ip-address' clauses in the
	  'server' section.
	* etc/bind2nsd.conf: add 'dest-ip'; add info on all options.
	* scripts/s64-sync: replace 'ip-address' with 'dest-ip'; make sure
	  zonec output shows up when in verbose mode.