@@ -7,7 +7,7 @@ BUG FIXES:
 FEATURES:
         - Added "hide-version" configuration setting. Enabling this feature 
           stops NSD from answering to CHAOS class version requests.
-	- Added bind2nsd 0.4.8 (http://bind2nsd.sourceforge.net) in contrib/.
+	- Added bind2nsd 0.5.0 (http://bind2nsd.sourceforge.net) in contrib/.
 
 3.0.5
 =============
